feat/generics-and-github-codespaces (#3)
* feat(DistributedList.java): update DistributedList to support generic key-value pairs with serializers for better type safety

* feat(codespaces.yml): added GitHub Codespaces configuration

* feat(SERIALIZATION_PATTERN.md): improved serialization extensibility

* refactor: refactored directory structure

* test(SerializerFactoryTest.java): added tests for new serializer funtionality

* fix(DistributedList.java): implemented a more traditional list removal algorithm, shifting elements left after a removal

* test(DistributedListTest.java): added tests to cover byte and float serialization and deserialization

* test(RedisStoreClientTest): added tests to cover incrementAndGet()

* fix: updated to Java 24

* fix(devcontainer.yml): resolve error on github actions

* fix(devcontainer.yml): no microsoft dev container image available for Java 24, using the Java 21 image

* fix(devcontainer.yml): added runCmd to resolve the OCI export issue

* fix: updated workflow to validation approach and changed back to Java 21

* fix: updated maven action